--- a/src/scss/theme/universal.scss
+++ b/src/scss/theme/universal.scss
@@ -9,3 +9,7 @@ body{
 .bold{font-weight:700;}
 .italic{font-style:italic;}
 .gray-text{color:#666c71;}
+
+.body-wrapper {
+  overflow: auto;
+}
